fixed missing borders on chrome

--- a/client/style/index.css
+++ b/client/style/index.css
@@ -634,7 +634,7 @@ a.confirm:hover {
 /* line 96, ../sass/globals/_components.scss */
 .card {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -774,7 +774,7 @@ input {
   line-height: 16pt;
   letter-spacing: 0;
   color: #000000;
-  border-bottom: 0.5pt #000000 solid;
+  border-bottom: 1pt #000000 solid;
 }
 /* line 163, ../sass/globals/_components.scss */
 input:focus, input:hover {
@@ -808,11 +808,11 @@ ul.menu {
   position: absolute;
   display: inline-block;
   white-space: nowrap;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   border-color: transparent;
   background-color: transparent;
   width: 0;
-  top: -0.5pt;
+  top: -1pt;
   font-family: "Neue Haas Unica W01", "Helvetica Neue";
   font-size: 12pt;
   font-weight: 400;
@@ -830,7 +830,7 @@ ul.menu {
 /* line 202, ../sass/globals/_components.scss */
 ul.menu.open {
   background: white;
-  border-color: #000000;
+  border-color: #aaa;
   width: 192pt;
   padding: 4pt 4pt 4pt 4pt;
 }
@@ -899,7 +899,7 @@ ul.menu.hideFirst.left > li.first {
 /* line 269, ../sass/globals/_components.scss */
 ul.menu.left {
   float: left;
-  left: -0.5pt;
+  left: -1pt;
 }
 /* line 273, ../sass/globals/_components.scss */
 ul.menu.left li, ul.menu.left.open li.hidden {
@@ -924,7 +924,7 @@ ul.menu.left.open li {
 }
 /* line 289, ../sass/globals/_components.scss */
 ul.menu.right {
-  right: -0.5pt;
+  right: -1pt;
 }
 /* line 292, ../sass/globals/_components.scss */
 ul.menu.right li, ul.menu.right.open li.hidden {
@@ -1333,7 +1333,7 @@ section.container header.main .topLeftButton {
   width: 75.68pt;
   white-space: nowrap;
   overflow: hidden;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   -moz-transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
   -o-transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
   -webkit-transition: cubic-bezier(0.19, 1, 0.22, 1) 1s;
@@ -1423,10 +1423,10 @@ section.container .collection {
 }
 /* line 90, ../sass/layout/_container.scss */
 section.container .collection.open > header h1.collectionName {
-  -moz-transform: translate3d(31.5pt, 0, 0);
-  -ms-transform: translate3d(31.5pt, 0, 0);
-  -webkit-transform: translate3d(31.5pt, 0, 0);
-  transform: translate3d(31.5pt, 0, 0);
+  -moz-transform: translate3d(31pt, 0, 0);
+  -ms-transform: translate3d(31pt, 0, 0);
+  -webkit-transform: translate3d(31pt, 0, 0);
+  transform: translate3d(31pt, 0, 0);
 }
 /* line 97, ../sass/layout/_container.scss */
 section.container .collection > header {
@@ -1473,7 +1473,7 @@ section.container .collection > header h1.collectionName a:hover {
 section.container .collection > .elements {
   z-index: 10;
   position: relative;
-  top: -0.5pt;
+  top: -1pt;
 }
 /* line 139, ../sass/layout/_container.scss */
 section.container .elements {
@@ -1510,7 +1510,7 @@ section.container section.space section.content .collection.closed article {
 }
 /* line 13, ../sass/layout/_article.scss */
 section.container section.space section.content .collection.closed article .card {
-  border-width: 2pt;
+  border-width: 4pt;
 }
 /* line 16, ../sass/layout/_article.scss */
 section.container section.space section.content .collection.closed article .card.text {
@@ -1721,24 +1721,24 @@ section.container section.space section.content article .card {
 /* line 200, ../sass/layout/_article.scss */
 section.container section.space section.content article .card.text {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
   background: -webkit-linear-gradient(#ffffaa 0%, #ffffff 100%);
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   width: 256pt;
   min-height: 192pt;
 }
 /* line 209, ../sass/layout/_article.scss */
 section.container section.space section.content article .card.image {
   width: 256pt;
-  margin-left: 0.5pt;
+  margin-left: 1pt;
 }
 /* line 215, ../sass/layout/_article.scss */
 section.container section.space section.content article .card.website {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -1853,7 +1853,7 @@ section.container section.space section.content article.addElementForm {
   height: 32pt;
   width: 32pt;
   border-radius: 32pt;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   border-style: dashed;
   background-color: white;
   background-image: url("/images/add.png");
@@ -2057,7 +2057,7 @@ body {
   padding-left: 16pt !important;
   padding-bottom: 8pt !important;
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -2094,7 +2094,7 @@ section.index > header ul.signUpLogInForms {
 section.index > header ul.signUpLogInForms li.form {
   cursor: pointer;
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -2135,7 +2135,7 @@ section.index > header ul.signUpLogInForms li.form.open {
 /* line 72, ../sass/index.scss */
 section.index > header h1 {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -2149,7 +2149,7 @@ section.index > header h1 {
 /* line 76, ../sass/index.scss */
 section.index > header h2 {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
@@ -2169,7 +2169,7 @@ section.index section.example {
 /* line 85, ../sass/index.scss */
 section.index section.example header.collectionTitle > h1 {
   background-color: white;
-  border: 0.5pt solid #000000;
+  border: 1pt solid #aaa;
   padding: 4pt 4pt 4pt 4pt;
   transform-origin: bottom right;
   -webkit-transform-origin: bottom right;
